@@ -16,6 +16,7 @@ export(calculateJSD)
 export(calculateNMDS)
 export(calculateOverlap)
 export(calculateUniFrac)
+export(calculateUnifrac)
 export(countDominantTaxa)
 export(estimateDivergence)
 export(estimateDiversity)
@@ -56,7 +57,7 @@ export(runDPCoA)
 export(runJSD)
 export(runNMDS)
 export(runOverlap)
-export(runUniFrac)
+export(runUnifrac)
 export(splitByRanks)
 export(subsampleCounts)
 export(subsetByPrevalentTaxa)
@@ -88,6 +89,7 @@ exportMethods(calculateNMDS)
 exportMethods(calculateOverlap)
 exportMethods(calculateRDA)
 exportMethods(calculateUniFrac)
+exportMethods(calculateUnifrac)
 exportMethods(checkTaxonomy)
 exportMethods(countDominantTaxa)
 exportMethods(estimateDivergence)
