@@ -1,13 +1,17 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/calculateUniFrac.R
-\name{calculateUniFrac}
+% Please edit documentation in R/calculateUnifrac.R
+\name{calculateUnifrac}
+\alias{calculateUnifrac}
+\alias{calculateUnifrac,ANY,phylo-method}
+\alias{calculateUnifrac,TreeSummarizedExperiment,missing-method}
 \alias{calculateUniFrac}
-\alias{calculateUniFrac,ANY,phylo-method}
-\alias{calculateUniFrac,TreeSummarizedExperiment,missing-method}
-\alias{runUniFrac}
-\title{Calculate weighted or unweighted (Fast) UniFrac distance}
+\alias{calculateUniFrac,ANY-method}
+\alias{runUnifrac}
+\title{Calculate weighted or unweighted (Fast) Unifrac distance}
 \usage{
-\S4method{calculateUniFrac}{ANY,phylo}(
+calculateUnifrac(x, tree, ...)
+
+\S4method{calculateUnifrac}{ANY,phylo}(
   x,
   tree,
   weighted = FALSE,
@@ -15,7 +19,7 @@
   BPPARAM = SerialParam()
 )
 
-\S4method{calculateUniFrac}{TreeSummarizedExperiment,missing}(
+\S4method{calculateUnifrac}{TreeSummarizedExperiment,missing}(
   x,
   abund_values = exprs_values,
   exprs_values = "counts",
@@ -23,7 +27,11 @@
   ...
 )
 
-runUniFrac(
+calculateUniFrac(x, ...)
+
+\S4method{calculateUniFrac}{ANY}(x, ...)
+
+runUnifrac(
   x,
   tree,
   weighted = FALSE,
@@ -36,7 +44,7 @@ runUniFrac(
 \code{\link[TreeSummarizedExperiment:TreeSummarizedExperiment-class]{TreeSummarizedExperiment}}
 object containing a tree.
 
-Please  note that \code{runUniFrac} expects a matrix with samples per row
+Please  note that \code{runUnifrac} expects a matrix with samples per row
 and not per column. This is implemented to be compatible with other
 distance calculations such as \code{\link[stats:dist]{dist}} as much as
 possible.}
@@ -46,21 +54,23 @@ possible.}
 matrix. This means that the phylo object and the columns should relate
 to the same type of features (aka. microorganisms).}
 
-\item{weighted}{\code{TRUE} or \code{FALSE}: Should use weighted-UniFrac
-calculation? Weighted-UniFrac takes into account the relative abundance of
-species/taxa shared between samples, whereas unweighted-UniFrac only
+\item{...}{optional arguments not used.}
+
+\item{weighted}{\code{TRUE} or \code{FALSE}: Should use weighted-Unifrac
+calculation? Weighted-Unifrac takes into account the relative abundance of
+species/taxa shared between samples, whereas unweighted-Unifrac only
 considers presence/absence. Default is \code{FALSE}, meaning the
-unweighted-UniFrac distance is calculated for all pairs of samples.}
+unweighted-Unifrac distance is calculated for all pairs of samples.}
 
 \item{normalized}{\code{TRUE} or \code{FALSE}: Should the output be
 normalized such that values range from 0 to 1 independent of branch length
-values? Default is \code{TRUE}. Note that (unweighted) \code{UniFrac} is
+values? Default is \code{TRUE}. Note that (unweighted) \code{Unifrac} is
 always normalized by total branch-length, and so this value is ignored when
 \code{weighted == FALSE}.}
 
 \item{BPPARAM}{A
 \code{\link[BiocParallel:BiocParallelParam-class]{BiocParallelParam}}
-object specifying whether the UniFrac calculation should be parallelized.}
+object specifying whether the Unifrac calculation should be parallelized.}
 
 \item{abund_values}{a single \code{character} value for specifying which
 assay to use for calculation.}
@@ -73,31 +83,29 @@ will be disabled.)}
 \item{transposed}{Logical scalar, is x transposed with cells in rows, i.e.,
 is Unifrac distance calculated based on rows (FALSE) or columns (TRUE).
 (By default: \code{transposed = FALSE})}
-
-\item{...}{optional arguments not used.}
 }
 \value{
 a sample-by-sample distance matrix, suitable for NMDS, etc.
 }
 \description{
-This function calculates the (Fast) UniFrac distance for all sample-pairs
+This function calculates the (Fast) Unifrac distance for all sample-pairs
 in a \code{\link[TreeSummarizedExperiment:TreeSummarizedExperiment-class]{TreeSummarizedExperiment}}
 object.
 }
 \details{
-Please note that if \code{calculateUniFrac} is used as a \code{FUN} for
+Please note that if \code{calculateUnifrac} is used as a \code{FUN} for
 \code{runMDS}, the argument \code{ntop} has to be set to \code{nrow(x)}.
 }
 \examples{
 data(esophagus)
 library(scater)
-calculateUniFrac(esophagus, weighted = FALSE)
-calculateUniFrac(esophagus, weighted = TRUE)
-calculateUniFrac(esophagus, weighted = TRUE, normalized = FALSE)
-# for using calculateUniFrac in conjunction with runMDS the tree argument
+calculateUnifrac(esophagus, weighted = FALSE)
+calculateUnifrac(esophagus, weighted = TRUE)
+calculateUnifrac(esophagus, weighted = TRUE, normalized = FALSE)
+# for using calculateUnifrac in conjunction with runMDS the tree argument
 # has to be given separately. In addition, subsetting using ntop must
 # be disabled
-esophagus <- runMDS(esophagus, FUN = calculateUniFrac, name = "UniFrac",
+esophagus <- runMDS(esophagus, FUN = calculateUnifrac, name = "Unifrac",
                     tree = rowTree(esophagus),
                     exprs_values = "counts",
                     ntop = nrow(esophagus))
@@ -106,7 +114,7 @@ reducedDim(esophagus)
 \references{
 \url{http://bmf.colorado.edu/unifrac/}
 
-The main implementation (Fast UniFrac) is adapted from the algorithm's
+The main implementation (Fast Unifrac) is adapted from the algorithm's
 description in:
 
 Hamady, Lozupone, and Knight,
@@ -115,9 +123,9 @@ UniFrac:} facilitating high-throughput phylogenetic analyses of microbial
 communities including analysis of pyrosequencing and PhyloChip data.'' The
 ISME Journal (2010) 4, 17--27.
 
-See also additional descriptions of UniFrac in the following articles:
+See also additional descriptions of Unifrac in the following articles:
 
-Lozupone, Hamady and Knight, ``UniFrac - An Online Tool for Comparing
+Lozupone, Hamady and Knight, ``Unifrac - An Online Tool for Comparing
 Microbial Community Diversity in a Phylogenetic Context.'', BMC
 Bioinformatics 2006, 7:371
 
@@ -125,7 +133,7 @@ Lozupone, Hamady, Kelley and Knight, ``Quantitative and qualitative (beta)
 diversity measures lead to different insights into factors that structure
 microbial communities.'' Appl Environ Microbiol. 2007
 
-Lozupone C, Knight R. ``UniFrac: a new phylogenetic method for comparing
+Lozupone C, Knight R. ``Unifrac: a new phylogenetic method for comparing
 microbial communities.'' Appl Environ Microbiol. 2005 71 (12):8228-35.
 }
 \author{
