@@ -23,3 +23,4 @@ Changes in version 1.3.x
 + bugfix: taxonomyTree gave error if taxa were agglomerated at highest level (taxa name mismatch)
 + bugfix: subsampleCounts errors if no samples are found after subsampling
 + added loadFromMetaphlan
++ renamed calculateUniFrac to calculateUnifrac 
